# spotter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pr.yml  release-and-cargo-publish.yml
src/: aws.rs  cli.rs  display.rs  fetch.rs  main.rs
