[package]
name = "spotter"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "AWS EC2 Spot Instance Advisor CLI Tool"
repository = "https://github.com/kohbis/spotter"
authors = ["kohbis <dev.kohbis@gmail.com>"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.28"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
